z-index issue

--- a/src/components/NDropdown/NDropdown.less
+++ b/src/components/NDropdown/NDropdown.less
@@ -80,6 +80,7 @@
     .nitrozen-dropup {
         transform: translate3d(0px, 0px, 0px);
         bottom: 42px;
+        z-index: 10;
     }
     .nitrozen-option {
         position: relative;
